# relevator-backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml
alembic/: env.py
app/: crud.py  database.py  deps.py  main.py  models.py  security.py  settings.py
app/api/: auth.py  items.py  users.py
app/db/: common.py  init_db.py  models.py
app/db/migrations/: env.py
app/db/migrations/versions/: 2512d34b6693_initial.py
app/routers/: auth.py  items.py  users.py
app/tests/: test_users.py  utils.py
tests/: conftest.py
tests/api/: test_login.py
